# Felix

./: .gitignore  CMakeLists.txt  README.md
Felix/: CMakeLists.txt  Felix.cpp  Felix.h
Felix/src/Core/: Core.h
Felix/src/Graphics/: GraphicsAPI.h
Felix/src/Graphics/API/Directx/DXGI/: DXGIUtils.cpp  DXGIUtils.h
Felix/src/Graphics/API/Directx11/Buffer/: DX11Buffer.cpp  DX11Buffer.h  DX11BufferUtils.cpp  DX11BufferUtils.h
Felix/src/Graphics/API/Directx11/Command/: DX11CommandBuffer.cpp  DX11CommandBuffer.h
Felix/src/Graphics/API/Directx11/Core/: DX11Core.h
Felix/src/Graphics/API/Directx11/Device/: DX11Device.cpp  DX11Device.h  DX11DeviceObjects.cpp  DX11DeviceObjects.h
Felix/src/Graphics/API/Directx11/Framebuffer/: DX11Framebuffer.cpp  DX11Framebuffer.h  DX11SwapchainFramebuffer.cpp  DX11SwapchainFramebuffer.h
Felix/src/Graphics/API/Directx11/Pipeline/: DX11Pipeline.cpp  DX11Pipeline.h  DX11PipelineUtils.cpp  (+1 more)
Felix/src/Graphics/Buffer/: GraphicsBuffer.h  GraphicsBufferCreateDesc.h  GraphicsBufferType.h  GraphicsBufferUpdateDesc.h  GraphicsBufferUsage.h
Felix/src/Graphics/Command/: CommandBuffer.cpp  CommandBuffer.h  CommandBufferCreateDesc.h
Felix/src/Graphics/Device/: GraphicsDevice.cpp  GraphicsDevice.h  GraphicsDeviceCapabilities.h  GraphicsDeviceObject.h  GraphicsDeviceObjectType.h  GraphicsDeviceObjects.h  StandaloneGraphicsDeviceCreateDesc.h  WindowGraphicsDeviceCreateDesc.h
Felix/src/Graphics/Framebuffer/: Framebuffer.cpp  Framebuffer.h  FramebufferAttachmentDesc.h  FramebufferCreateDesc.h  SwapchainFramebuffer.cpp  SwapchainFramebuffer.h  SwapchainFramebufferCreateDesc.h
Felix/src/Graphics/Pipeline/: BlendingFactor.h  BlendingFunction.h  BlendingStateCreateDesc.h  BlendingStateDesc.h  ComparisionFunction.h  CullMode.h  DepthFunction.h  DepthStencilStateDesc.h  DepthTestFunction.h  FrontFaceMode.h  InputElementDataType.h  InputElementDesc.h  InputElementSemantic.h  InputElementUtils.cpp  InputElementUtils.h  InputLayoutDesc.cpp  InputLayoutDesc.h  OutputDesc.h  Pipeline.h  PipelineCreateDesc.h  PipelineType.h  PolygonShadingMode.h  PrimitiveTopology.h  RasterizerStateDesc.h  ResourceSlotDesc.h  ResourceStateDesc.h  ScissorsDesc.h  ShaderPassDesc.h  StencilFaceDesc.h  StencilFunction.h  StencilOperation.h  VertexElementDataType.h  VertexElementDesc.h  VertexElementUtils.cpp  VertexElementUtils.h  VertexLayoutDesc.cpp  VertexLayoutDesc.h  ViewportDesc.h
Felix/src/Graphics/Platform/: PlatformType.h
Felix/src/Graphics/Resource/: GraphicsResource.h  GraphicsResourceCreateDesc.h  GraphicsResourceType.h
Felix/src/Graphics/Shader/: Shader.h  ShaderCreateDesc.h  ShaderType.h
Felix/src/Graphics/Texture/: Texture.h  TextureCreateDesc.h  TextureFormat.h  TextureLoadResult.h  TextureLoader.cpp  TextureLoader.h  TextureLoaderUtils.cpp  TextureLoaderUtils.h  TextureMagFilter.h  TextureMinFilter.h  TextureSampler.h  TextureSamplerCreateDesc.h  TextureSamplerFilter.h  TextureSamplerMagFilter.h  TextureSamplerMinFilter.h  TextureSamplerWrapMode.h  TextureType.h  TextureUpdateDesc.h  TextureUsage.h  TextureWrapMode.h
Felix/src/Platform/Linux/Window/: LinuxWindow.cpp  LinuxWindow.h
Felix/src/Platform/Windows/Assert/: WindowsAssert.h
Felix/src/Platform/Windows/Window/: WindowsWindow.cpp  WindowsWindow.h
Felix/src/Window/: Window.cpp  Window.h  WindowCreateDesc.h  WindowDeviceAdapter.cpp  WindowDeviceAdapter.h  WindowEvent.h  WindowEventType.h  WindowEvents.h
Felix/src/Window/Events/Keyboard/: KeyboardKeyDownEvent.h  KeyboardKeyEvent.h  KeyboardKeyUpEvent.cpp  KeyboardKeyUpEvent.h
Felix/src/Window/Events/Mouse/: MouseButtonDownEvent.h  MouseButtonEvent.h  MouseButtonUpEvent.h  MouseMovedEvent.h  MouseWheelScrolled.h
Felix/src/Window/Events/Window/: WindowClosedEvent.h  WindowMovedEvent.h  WindowResizedEvent.h
Sample/: CMakeLists.txt  main.cpp
WindowsTest/: CMakeLists.txt  main.cpp
(+68 files in other folders)
